--- a/app/views/mainpages/index.html.haml
+++ b/app/views/mainpages/index.html.haml
@@ -15,4 +15,6 @@
 					%p
 						= submit_tag 'Sign in'
 				%p
+					= link_to "Sign up", new_user_registration_path
+				%p
 					= link_to "Forgot your password?", new_password_path(:user)
