--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,4 +13,8 @@
         padding-right: 60px;
         padding-top: 70px;
       }
+    = nav_bar :fixed => :top, :brand => 'Главная страница', :brand_link => mainpages_path do
+      = menu_group do
+        = menu_item 'Главная страница', mainpages_path
+
     = yield
