--- a/app/views/mainpages/index.html.haml
+++ b/app/views/mainpages/index.html.haml
@@ -12,10 +12,19 @@
 							= password_field_tag 'user[password]'
 						%p
 							= check_box_tag 'user[remember_me]'
-							= label_tag 'user[remember_me]', 'Remember me'
+							= label_tag 'user[remember_me]', 'Запомнить'
 						%p
-							= submit_tag 'Sign in'
+							= submit_tag 'Вход'
 					%p
-						= link_to "Sign up", new_user_registration_path
+						= link_to "Регистрация", new_user_registration_path
 					%p
-						= link_to "Forgot your password?", new_password_path(:user)
+						= link_to "Забыли пароль?", new_password_path(:user)
+				- else
+					%div.col-md-4
+						%div.row
+							%strong 
+								= link_to "Ваш офис", profile_path(@user)
+					%div.col-md-4
+						%div.row
+							%strong
+								= link_to "Выход", destroy_user_session_path, method: :delete
