--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -8,6 +8,6 @@
         %p
           = f.input :last_name, as: :string, label: 'Last name'
         %p
-          = f.input :date_of_birth, as: :string, label: 'Date of birth'
+          = f.input :date_of_birth, as: :string, input_html: { value: @resource.date_of_birth.strftime("%m.%d.%Y") },  label: 'Date of birth'
         %p
           = f.button :submit, 'Готово', class: "btn btn-primary"
