--- a/app/views/stores/_form.html.haml
+++ b/app/views/stores/_form.html.haml
@@ -8,4 +8,4 @@
   %p
     = f.input :store_city, label: 'Город'
   %p
-    = f.button :submit, 'Создать магазин', class: "btn btn-primary"
+    = f.button :submit, 'Сохранить', class: "btn btn-primary"
