--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -10,4 +10,5 @@
         %p
           = f.input :date_of_birth, as: :string, input_html: { value: @resource.date_of_birth.strftime("%m.%d.%Y") },  label: 'Date of birth'
         %p
+          = link_to "Назад", profile_path(@user.profile), class: "btn btn-default"
           = f.button :submit, 'Готово', class: "btn btn-primary"
