--- a/app/views/stores/_form.html.haml
+++ b/app/views/stores/_form.html.haml
@@ -8,4 +8,5 @@
   %p
     = f.input :store_city, label: 'Город'
   %p
+    = link_to "Назад", profile_path(@user.profile), class: "btn btn-default"
     = f.button :submit, 'Сохранить', class: "btn btn-primary"
