--- a/app/views/stores/show.html.haml
+++ b/app/views/stores/show.html.haml
@@ -20,6 +20,9 @@
       %div.row
         %div.col-md-4
           %div.row
+            = link_to "Назад", profile_path(@user.profile), class: "btn btn-default btn-block"
+        %div.col-md-4
+          %div.row
             = link_to "Редактировать", edit_store_path(@resource), class: "btn btn-default btn-block"
         %div.col-md-4
           %div.row
