[STORE] store resource fix

--- a/app/views/mainpages/index.html.haml
+++ b/app/views/mainpages/index.html.haml
@@ -23,7 +23,7 @@
 					%div.col-md-4
 						%div.row
 							%strong 
-								= link_to "Ваш офис", profile_path(@user), class: "btn btn-default btn-block"
+								= link_to "Ваш офис", profile_path(@user.profile), class: "btn btn-default btn-block"
 					%div.col-md-4
 						%div.row
 							%strong
