--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,14 +1,8 @@
 %div.container-fluid
   %div.row
     %div.col-md-8
-      %b Редактирование
-      = simple_form_for @resource, url: profile_path, method: :put do |f|
-        %p
-          = f.input :first_name, as: :string, label: 'First name'
-        %p
-          = f.input :last_name, as: :string, label: 'Last name'
-        %p
-          = f.input :date_of_birth, as: :string, input_html: { value: @resource.date_of_birth.strftime("%m.%d.%Y") },  label: 'Date of birth'
-        %p
-          = link_to "Назад", profile_path(@user.profile), class: "btn btn-default"
-          = f.button :submit, 'Готово', class: "btn btn-primary"
+      - if @resource.date_of_birth.present?
+        %b Измените свой профиль
+      - else
+        %b Заполните свой профиль
+      = render 'form'
