--- a/app/views/stores/_form.html.haml
+++ b/app/views/stores/_form.html.haml
@@ -4,7 +4,7 @@
   %p
     = f.input :type, label: 'Специализация'
   %p
-    = f.input :store_country, label: 'Страна'
+    = f.input :store_country, label: 'Страна'#, collection: @countries_list
   %p
     = f.input :store_city, label: 'Город'
   %p
