--- a/app/views/goods/index.html.haml
+++ b/app/views/goods/index.html.haml
@@ -2,7 +2,7 @@
   %div.row
     %div.col-md-12
       = link_to "Добавить новый товар", new_store_good_path, :class => 'btn btn-default pull-left'
-      = link_to "Вернуться в магазин", store_path(@store), :class => 'btn btn-default pull-right'
+      = link_to "Вернуться в магазин", store_path(@store.title), :class => 'btn btn-default pull-right'
       %br
       %br
       - if @resource.any?
@@ -41,9 +41,9 @@
                 - if g.last_buying_date.present?
                   %td #{g.last_buying_date.strftime("%m.%d.%Y")}
                 - else
-                  %td Этот товар еще никто не покупал, станьте первым!
+                  %td Этот товар еще никто не покупал
                   %td
                     %p
-                      = link_to "Подробнее", store_good_path(@store, g), class: "btn btn-default"
+                      = link_to "Подробнее", store_good_path(@store.title, g), class: "btn btn-default btn-xs btn-block"
                     %p
-                      = link_to "Удалить", store_good_path(@store, g), class: "btn btn-default", method: :delete, class: "btn btn-danger btn-block", data: { confirm: 'Вы уверены?' }
+                      = link_to "Удалить", store_good_path(@store.title, g), method: :delete, class: "btn btn-danger btn-block btn-xs", data: { confirm: 'Вы уверены?' }
