--- a/app/views/goods/new.html.haml
+++ b/app/views/goods/new.html.haml
@@ -2,4 +2,18 @@
   %div.row
     %div.col-md-8
       %h3 Добавьте товар на склад
-      = render 'form'
+      = simple_form_for [@store, @resource], method: :post, url: store_goods_path(store_title: @store.title) do |f|
+        %p
+          = f.input :name, as: :string, label: 'Название'
+        %p
+          = f.input :category, as: :string, label: 'Категория товара'
+        %p
+          = f.input :description, as: :string, label: 'Описание'
+        - if @resource.new_record?
+          %p
+            = f.input :count, as: :integer, label: 'Количество'
+        %p
+          = f.input :unit, as: :select, :collection => ['шт', 'кг', 'л'], label: 'единица измерения', :selected => 'шт'
+        %p
+          = link_to "К списку товаров", store_goods_path, class: "btn btn-default"
+          = f.button :submit, 'Готово', class: "btn btn-primary"
