--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -5,10 +5,10 @@
     = f.input :last_name, as: :string, label: 'Last name'
   - if @resource.date_of_birth.present?
     %p
-      = f.input :date_of_birth, as: :string, input_html: { value: @resource.date_of_birth.strftime("%d.%m.%Y") },  label: 'Date of birth'
+      = f.input :date_of_birth, as: :string, input_html: { value: @resource.date_of_birth.strftime("%d.%m.%Y") },  label: 'Date of birth', placeholder: "19.01.1990"
   - else
     %p
-      = f.input :date_of_birth, as: :string, label: 'Date of birth'
+      = f.input :date_of_birth, as: :string, label: 'Date of birth', placeholder: "19.01.1990"
   %p
     - if @user.profile.first_name.present?
       = link_to "Назад", profile_path(@user.profile), class: "btn btn-default"
