--- a/app/views/stores/edit.html.haml
+++ b/app/views/stores/edit.html.haml
@@ -2,4 +2,17 @@
   %div.row
     %div.col-md-8
       %h3 Отредактируйте основную информацию о Вашем интернет-магазине
-      = render 'form'
+      = simple_form_for @resource, url: store_path(title: @resource.title), method: :put do |f|
+        %p
+          = f.input :name, label: 'Название'
+        %p
+          = f.input :speciality, label: 'Специализация'
+        %p
+          = f.input :goods_type, label: 'Мы продаем', collection: ['Товары', 'Услуги'], :selected => 'Товары'
+        %p
+          = f.input :store_country, label: 'Страна'#, collection: @countries_list
+        %p
+          = f.input :store_city, label: 'Город'
+        %p
+          = link_to "Назад", profile_path(@user.profile), class: "btn btn-default"
+          = f.button :submit, 'Сохранить', class: "btn btn-primary"
