--- a/app/views/stores/show.html.haml
+++ b/app/views/stores/show.html.haml
@@ -9,7 +9,10 @@
               = @resource.name 
         %tr
           %td
-            = "Тип деятельности: #{@resource.type}"
+            = "Специализация: #{@resource.speciality}"
+        %tr
+          %td
+            = "Продаем: #{@resource.goods_type}"
         %tr
           %td 
             = "Открыт: #{@resource.date_of_opening.strftime("%m.%d.%Y")}"
@@ -22,12 +25,12 @@
           = link_to "Назад в офис", profile_path(@user.profile), class: "btn btn-default btn-block"
         %br
         %p
-          = link_to "Редактировать", edit_store_path(@resource), class: "btn btn-default btn-block"
+          = link_to "Редактировать", edit_store_path(@resource.title), class: "btn btn-default btn-block"
         %p
-          = link_to "Удалить", store_path(@resource), method: :delete, class: "btn btn-danger btn-block", data: { confirm: 'Вы уверены?' }
+          = link_to "Удалить", store_path(@resource.title), method: :delete, class: "btn btn-danger btn-block", data: { confirm: 'Вы уверены?' }
         %br
         %b Товары
         %p
-          = link_to "Все товары", store_goods_path(@resource), class: "btn btn-success btn-block"
+          = link_to "Все товары", store_goods_path(@resource.title), class: "btn btn-success btn-block"
         %p
-          = link_to "Добавить товар", new_store_good_path(@resource), class: "btn btn-success btn-block"
+          = link_to "Добавить товар", new_store_good_path(@resource.title), class: "btn btn-success btn-block"
