[CLIENT] client's profile

--- a/app/views/profiles/sailer_edit.html.haml
+++ b/app/views/profiles/sailer_edit.html.haml
@@ -5,4 +5,4 @@
         %b Измените свой профиль
       - else
         %b Заполните свой профиль
-      = render 'form'
+      = render 'sailer_form'
