--- a/app/views/profiles/sailer_show.html.haml
+++ b/app/views/profiles/sailer_show.html.haml
@@ -6,9 +6,10 @@
       %p
         %strong 
           = "Имя: #{@resource.first_name}"
-      %p
-        %strong 
-          = "Фамилия: #{@resource.last_name}"
+      - if @resource.last_name.present?
+        %p
+          %strong 
+            = "Фамилия: #{@resource.last_name}"
       - if @resource.date_of_birth.present?
         %p
           %strong 
@@ -17,6 +18,10 @@
         %p
           %strong 
             = "Дата рождения: Не указана"
+      - if @resource.company.present?
+        %p
+          %strong 
+            = "Компания: #{@resource.company}"
     %div.col-md-4
       %p
         = link_to "Редактировать профиль", edit_profile_path, class: "btn btn-default btn-block"
