--- a/app/views/services/new.html.haml
+++ b/app/views/services/new.html.haml
@@ -2,22 +2,19 @@
   %div.row
     %div.col-md-8
       %h3 Добавьте товар на склад
-      = simple_form_for [@store, @resource], method: :post, url: store_goods_path(store_title: @store.title) do |f|
+      = simple_form_for [@store, @resource], method: :post, url: store_services_path(store_title: @store.title) do |f|
         %p
           = f.input :name, as: :string, label: 'Название'
         %p
           = f.input :category, as: :string, label: 'Категория товара'
         %p
           = f.input :description, as: :string, label: 'Описание'
-        - if @resource.new_record?
-          %p
-            = f.input :count, as: :integer, label: 'Количество'
         %p
-          = f.input :unit, as: :select, collection: Good::UNITS, selected: Good::UNITS['Шт']
+          = f.input :in_sight, as: :boolean, label: 'В наличии'
         %p
           = f.input :price, as: :string, label: 'Стоимость'
         %p
-          = f.input :currency, as: :select, collection: Good::CURRENCIES, selected: Good::CURRENCIES['Руб']
+          = f.input :currency, as: :select, collection: Service::CURRENCIES, selected: Service::CURRENCIES['Руб']
         %p
-          = link_to "К списку товаров", store_goods_path, class: "btn btn-default"
+          = link_to "К списку товаров", store_services_path, class: "btn btn-default"
           = f.button :submit, 'Готово', class: "btn btn-primary"
