--- a/app/views/profiles/_client_form.html.haml
+++ b/app/views/profiles/_client_form.html.haml
@@ -10,6 +10,8 @@
     %p
       = f.input :date_of_birth, as: :string, label: 'Дата рождения', placeholder: "19.01.1990"
   %p
+    = f.input :phone_number, as: :string, label: 'Номер телефона', placeholder: "81234567890"
+  %p
     - if @user.profile.first_name.present?
       = link_to "Назад", profile_path(@user.profile), class: "btn btn-default"
     = f.button :submit, 'Готово', class: "btn btn-primary"
