--- a/app/views/sailer/goods/edit.html.haml
+++ b/app/views/sailer/goods/edit.html.haml
@@ -9,6 +9,8 @@
           = f.input :category, as: :string, label: 'Категория товара'
         %p
           = f.input :description, as: :string, label: 'Описание'
+        %p
+          = f.input :keywords, as: :string, label: 'Ключевые слова', placeholder: "example1, example2, example3"
         - if @resource.new_record?
           %p
             = f.input :count, as: :integer, label: 'Количество'
