--- a/app/views/sailer/services/new.html.haml
+++ b/app/views/sailer/services/new.html.haml
@@ -10,6 +10,8 @@
         %p
           = f.input :description, as: :string, label: 'Описание'
         %p
+          = f.input :keywords, as: :string, label: 'Ключевые слова', placeholder: "example1, example2, example3"
+        %p
           = f.input :in_sight, as: :boolean, label: 'В наличии'
         %p
           = f.input :price, as: :string, label: 'Стоимость'
