--- a/app/views/goods_choises/_table.html.haml
+++ b/app/views/goods_choises/_table.html.haml
@@ -40,7 +40,7 @@
                 %td Да
               - else
                 %td Нет
-              %td #{g.price} #{Good::CURRENCIES.key(g.currency)}
+              %td #{'%.2f' % g.price} #{Good::CURRENCIES.key(g.currency)}
               %td
                 = link_to "#{g.store.name}", stores_choise_path(g.store)
               - if g.last_buying_date.present?
