--- a/app/views/profiles/_client_form.html.haml
+++ b/app/views/profiles/_client_form.html.haml
@@ -12,6 +12,12 @@
   %p
     = f.input :phone_number, as: :string, label: 'Номер телефона', placeholder: "81234567890"
   %p
+    = f.input :country, as: :string, label: 'Страна'
+  %p
+    = f.input :city, as: :string, label: 'Населенный пункт'
+  %p
+    = f.input :adress, as: :string, label: 'Адрес', placeholder: "ул. Первая, дом 0, кв. 0"
+  %p
     - if @user.profile.first_name.present?
       = link_to "Назад", profile_path(@user.profile), class: "btn btn-default"
     = f.button :submit, 'Готово', class: "btn btn-primary"
