--- a/app/views/profiles/sailer_show.html.haml
+++ b/app/views/profiles/sailer_show.html.haml
@@ -1,27 +1,30 @@
 %div.container-fluid
   %div.row
     %div.col-md-8
-      %p
-        = "Добро пожаловать, #{@resource.first_name} #{@resource.last_name}"
-      %p
-        %strong 
-          = "Имя: #{@resource.first_name}"
-      - if @resource.last_name.present?
-        %p
-          %strong 
-            = "Фамилия: #{@resource.last_name}"
-      - if @resource.date_of_birth.present?
-        %p
-          %strong 
-            = "Дата рождения: #{@resource.date_of_birth.strftime("%m.%d.%Y")}"
-      -else
-        %p
-          %strong 
-            = "Дата рождения: Не указана"
-      - if @resource.company.present?
-        %p
-          %strong 
-            = "Компания: #{@resource.company}"
+      %table.table
+        %tr
+          %td
+            %b
+              = "Добро пожаловать, #{@resource.first_name} #{@resource.last_name}"
+        %tr
+          %td
+            = "Имя: #{@resource.first_name}"
+        %tr
+          %td
+            - if @resource.last_name.present?
+              = "Фамилия: #{@resource.last_name}"
+        %tr
+          %td
+            - if @resource.date_of_birth.present?
+              = "Дата рождения: #{@resource.date_of_birth.strftime("%m.%d.%Y")}"
+            - else
+              = "Дата рождения: Не указана"
+        %tr
+          %td
+            - if @resource.company.present?
+              = "Компания: #{@resource.company}"
+            - else
+              = 'Компания: Не указана'
     %div.col-md-4
       %p
         = link_to "Редактировать профиль", edit_profile_path, class: "btn btn-default btn-block"
