--- a/app/views/sailer/goods/edit.html.haml
+++ b/app/views/sailer/goods/edit.html.haml
@@ -15,11 +15,11 @@
           %p
             = f.input :count, as: :integer, label: 'Количество'
         %p
-          = f.input :unit, as: :select, collection: Good::UNITS
+          = f.input :unit, as: :select, label: 'Измеряется в:', collection: Good::UNITS
         %p
-          = f.input :price, as: :string, label: 'Стоимость'
+          = f.input :price, as: :float, label: 'Стоимость'
         %p
-          = f.input :currency, as: :select, collection: Good::CURRENCIES
+          = f.input :currency, as: :select, collection: Good::CURRENCIES, label: 'Валюта'
         %p
           = link_to "Назад", store_good_path(@store.title, @resource), class: "btn btn-default"
           = f.button :submit, 'Готово', class: "btn btn-primary"
