--- a/app/views/sailer/services/show.html.haml
+++ b/app/views/sailer/services/show.html.haml
@@ -22,7 +22,7 @@
               = 'Нет'
         %tr
           %td
-            = "Стоимость, #{Service::CURRENCIES.key(@resource.currency)}: #{@resource.price.round 2}"
+            = "Стоимость, #{Service::CURRENCIES.key(@resource.currency)}: #{'%.2f' % @resource.price}"
         %tr
           %td
             - if @resource.last_buying_date.present?
