--- a/app/views/goods_choises/_table.html.haml
+++ b/app/views/goods_choises/_table.html.haml
@@ -9,8 +9,9 @@
           %span.input-group-btn
             %button.btn.btn-primary{type: "submit"} Поехали!
   %div.row
-    %div.col-md-8
+    %div.col-md-12
     - if @resource.any?
+      = will_paginate @resource, renderer: BootstrapPagination::Rails
       %br
       %table{:class => 'table table-striped table-bordered'}
         %thead
@@ -42,9 +43,10 @@
                 %td Нет
               %td #{'%.2f' % g.price} #{Good::CURRENCIES.key(g.currency)}
               %td
-                = link_to "#{g.store.name}", stores_choise_path(g.store)
+                = link_to "#{g.store.name}", stores_choise_path(g.store.title)
               - if g.last_buying_date.present?
                 %td #{g.last_buying_date.strftime("%m.%d.%Y")}
               - else
                 %td Этот товар еще никто не покупал, станьте первым!
-                    
+      = will_paginate @resource, renderer: BootstrapPagination::Rails
+                  
