--- a/app/views/sailer/goods/index.html.haml
+++ b/app/views/sailer/goods/index.html.haml
@@ -6,6 +6,7 @@
       %br
       %br
       - if @resource.any?
+      = will_paginate @resource, renderer: BootstrapPagination::Rails
         %br
         %table{:class => 'table table-striped table-bordered'}
           %thead
@@ -53,3 +54,4 @@
                       = link_to "Подробнее", store_good_path(@store.title, g), class: "btn btn-default btn-xs btn-block"
                     %p
                       = link_to "Удалить", store_good_path(@store.title, g), method: :delete, class: "btn btn-danger btn-block btn-xs", data: { confirm: 'Вы уверены?' }
+      = will_paginate @resource, renderer: BootstrapPagination::Rails
