--- a/app/views/sailer/services/show.html.haml
+++ b/app/views/sailer/services/show.html.haml
@@ -26,9 +26,12 @@
         %tr
           %td
             - if @resource.last_buying_date.present?
-              = "В последний раз купили: #{@resource.description}"
+              = "В последний раз купили: #{@resource.last_buying_date}"
             - else
               = 'Эту услугу еще никто не заказывал'
+        %tr
+          %td
+            = "Всего покупок совершено: #{@resource.buying_count.to_i}"
     %div.col-md-4
       %div.row
         %p
