--- a/app/views/sailer/stores/show.html.haml
+++ b/app/views/sailer/stores/show.html.haml
@@ -17,6 +17,21 @@
           %td 
             = "Открыт: #{@resource.date_of_opening.strftime("%m.%d.%Y")}"
         %tr
+          %td
+            - if @resource.goods_type == 'goods'
+              = "Различных товаров в ассортименте: #{@resource.goods.count.to_i}"
+            - else
+              = "Различных услуг ассортименте #{@resource.services.count.to_i}"
+        %tr
+          %td
+            - if @resource.last_buying_date
+              = "Последняя покупка: #{@resource.last_buying_date.strftime("%m.%d.%Y")}"
+            - else
+              = "Последняя покупка: еще не совершалась"
+        %tr
+          %td
+            = "Всего покупок совершено: #{@resource.buying_count.to_i}"
+        %tr
           %td 
             = "Местоположение: #{@resource.store_city}, #{@resource.store_country}"
     %div.col-md-4
